--- a/Landing Page/styles.css
+++ b/Landing Page/styles.css
@@ -317,19 +317,35 @@ nav .join-button:hover {
 }
 
 /* About Section */
-.about-section {
+ .about-section{
   display: flex;
-  background-color: #f5f5f5;
-}
-.about-section span {
+  background-color: #f0f2f5;
+  align-items: center;
+ }
+ .right-section{
+  background-color: #f4f4f4;
+    width: 50%;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+ }
+ .left-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 20px;
+ }
+ .team-photo{
+  width: 100%;
+  border-top-right-radius:70px;
+  border-bottom-right-radius: 70px;
+ }
+ .right-section span{
   color: black;
-}
-
-#logo2 {
-  width: 60px;
-  margin-bottom: 20px;
-}
-
+ }
 /* Testimonial Section */
 .testimonial-section {
   padding: 50px 20px;
